Log picker sync metrics
Test: statsd_testdrive
Bug: 285895220
Change-Id: I3668b82555077b0b986023b2034b486c551c4851